--- a/default/app.conf
+++ b/default/app.conf
@@ -14,3 +14,7 @@ author = mika.borner@gmail.com
 description = Splunk App for Thingsee One
 version = 1.0
 
+[package]
+id = thingsee
+check_for_updates = 1
+
